--- a/sequencer/CMakeLists.txt
+++ b/sequencer/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.0)
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -std=c++1y")
 
 include_directories(/usr/local/include/oscpack)
+link_directories(/usr/local/lib)
 
 set(name beatcomputer)
 file(GLOB lib_sources "*.cpp")
